--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="app">
         <div class="back-video-container">
             <video loop>
-                <source src="./videos/rain.mp4" type="video/mp4">
+                <source src="rain.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -23,7 +23,7 @@
         </div>
         <div class="video-container">
             <audio class="song">
-                <source src="./sounds/rain.mp3" />
+                <source src="rain.mp3" />
             </audio>
             <span class="play">
                 <button class="btn"><i class="fa-solid fa-play"></i></button>
@@ -31,10 +31,10 @@
             <h3 class="time-display"></h3>
         </div>
         <div class="sound-select">
-            <button data-sound="sounds/rain.mp3" class="btn-season" data-video="videos/rain.mp4">
+            <button data-sound="rain.mp3" class="btn-season" data-video="rain.mp4">
                 <i class="fa-solid fa-cloud-rain"></i>
             </button>
-            <button data-sound="sounds/beach.mp3" class="btn-season" data-video="videos/beach.mp4">
+            <button data-sound="beach.mp3" class="btn-season" data-video="beach.mp4">
                 <i class="fa-solid fa-umbrella-beach"></i>
             </button>
         </div>
